Site atualizado para jogar no github

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../mainha/assets/css/template.css">
+    <script src="https://kit.fontawesome.com/24f28a0b1a.js" crossorigin="anonymous"></script>
     <title>Diu aRts</title>
 </head>
 <body>
@@ -36,7 +37,7 @@ trabalho por onde passa</pre>
                 </div>
                 <div class="botao">
                     <a href="">Saiba mais ></a>
-                    <a href="">Saiba mais ></a>
+                    <a href="">Ver preço></a>
                 </div>
             </div>
             <div class="img_pag1">
@@ -46,32 +47,82 @@ trabalho por onde passa</pre>
     </main>
     <section class="section1">
         <div class="container">
-            <div class="img-back">
-                <div class="container">
                     <div class="img_pag1">
                         <img src="../mainha/assets/imagens/1 (6).png" alt="Coelho amarelo">
                     </div>
                     <div class="text_pag1">
                         <h1>Coelho Amarelo</h1>
-                    </div>
-                </div>    
-            </div>
+                        <pre>   Totalmente artesanal, <br>produção em Cafarnaum Bahia</pre>
+                        <div class="disponibilidade">
+                            <p>Confira em breve a disponibilidade.</p>
+                        </div>
+                        <div class="botao">
+                            <a href="">Saiba mais ></a>
+                            <a href="">Comprar ></a>
+                        </div>
+                    </div>  
         </div>
     </section>
     <section class="section2">
-        <div class="img-back">
             <div class="container">
-                <div class="text_pag1">
-
+                <div class="text_pag2">
+                    <h1>Coelho Amarelo</h1>
+                    <pre>   Totalmente artesanal, <br>produção em Cafarnaum Bahia</pre>
+                    <div class="disponibilidade">
+                        <p>Confira em breve a disponibilidade.</p>
+                    </div>
+                    <div class="botao">
+                        <a href="">Saiba mais ></a>
+                        <a href="">Comprar ></a>
+                    </div>
                 </div>
                 <div class="img_pag2">
-
+                    <img src="../mainha/assets/imagens/1 (5).png" alt="CoelhoAmareloSentado">
                 </div>
             </div>    
+    </section>
+    <section class="section3">
+        <h1>Galeria</h1>
+        <div class="container">
+            
+            <div class="img1">
+                <h2>Amigurume</h2>
+                <p>O melhor preço</p>
+                <p>Confira em breve a disponibilidade.</p>
+                <img src="../mainha/assets/imagens/a (1).png" alt="smurf">
+            </div>
+            <div class="img1">
+                <h2>Amigurume</h2>
+                <p>O melhor preço</p>
+                <p>Confira em breve a disponibilidade.</p>
+                <img src="../mainha/assets/imagens/a (2).png" alt="smurf">
+            </div>
+            <div class="img1">
+                <h2>Amigurume</h2>
+                <p>O melhor preço</p>
+                <p>Confira em breve a disponibilidade.</p>
+                <img src="../mainha/assets/imagens/a (3).png" alt="smurf">
+            </div>
+            <div class="img1">
+                <h2>Amigurume</h2>
+                <p>O melhor preço</p>
+                <p>Confira em breve a disponibilidade.</p>
+                <img src="../mainha/assets/imagens/a (4).png" alt="smurf">
+            </div>
         </div>
     </section>
     <footer>
-        
+        <div class="container">
+            <div class="text-footer">
+                <h3>Que não me falte linha para remendar a vida, mas,<br>sobretudo, que não me falte cores para bordá-la.</h3>
+                <h6>Edna Frigato</h6>
+            </div>
+            <div class="incone">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-whatsapp"></i>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
